# RSDKv5u-Origins

./: CMakeLists.txt
RSDKv5/: Helpers.h  HiteModLoader.h  Patches.cpp  Patches.hpp  S3K.cpp  S3K.hpp  S3KFunctions.cpp  S3KFunctions.hpp  SigScan.cpp  SigScan.h  Symbols.cpp  Symbols.h  main.cpp  main.hpp
RSDKv5/RSDK/Audio/: Audio.cpp  Audio.hpp
RSDKv5/RSDK/Audio/Oboe/: OboeAudioDevice.cpp
RSDKv5/RSDK/Core/: Link.cpp  Link.hpp  ModAPI.cpp  ModAPI.hpp  Reader.cpp  Reader.hpp  RetroEngine.cpp  RetroEngine.hpp
RSDKv5/RSDK/Core/Legacy/v3/: RetroEnginev3.cpp
RSDKv5/RSDK/Core/Legacy/v4/: RetroEnginev4.cpp
RSDKv5/RSDK/Dev/: Debug.cpp  Debug.hpp
RSDKv5/RSDK/Graphics/: Animation.cpp  Animation.hpp  Scene3D.hpp  Sprite.cpp
RSDKv5/RSDK/Graphics/DX11/: DX11RenderDevice.cpp
RSDKv5/RSDK/Graphics/DX9/: DX9RenderDevice.cpp
RSDKv5/RSDK/Graphics/Legacy/: DrawingLegacy.cpp  DrawingLegacy.hpp
RSDKv5/RSDK/Input/: Input.cpp
RSDKv5/RSDK/Scene/: Collision.cpp  Collision.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp
RSDKv5/RSDK/User/Core/: UserAchievements.cpp  UserCore.cpp  UserCore.hpp  UserPresence.cpp  UserStats.cpp  UserStorage.cpp  UserStorage.hpp
RSDKv5/RSDK/User/Dummy/: DummyCore.cpp
RSDKv5/RSDK/User/EOS/: EOSAchievements.cpp  EOSAchievements.hpp  EOSCore.cpp  EOSCore.hpp  EOSStats.cpp  EOSStats.hpp  EOSStorage.cpp  EOSStorage.hpp
RSDKv5/RSDK/User/Steam/: SteamAchievements.cpp  SteamAchievements.hpp  SteamCore.cpp  SteamCore.hpp  SteamPresence.cpp  SteamPresence.hpp  SteamStats.cpp  SteamStats.hpp  SteamStorage.cpp  SteamStorage.hpp
RSDKv5U/: RSDKv5U_dx9.vcxproj  RSDKv5U_dx9.vcxproj.filters  RSDKv5U_sdl2.vcxproj  RSDKv5U_sdl2.vcxproj.filters
SignatureData/: symbols.txt
Signatures/: main.py
dependencies/windows/: .gitignore
